// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetoxLogFinalizer createEventStream should create a stream of Chrome Trace format events 1`] = `
Array [
  Object {
    "args": Object {
      "name": "primary",
    },
    "name": "process_name",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  Object {
    "args": Object {
      "sort_index": 0,
    },
    "name": "process_sort_index",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  Object {
    "args": Object {
      "name": "main",
    },
    "name": "thread_name",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  Object {
    "args": Object {
      "sort_index": 0,
    },
    "name": "thread_sort_index",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  Object {
    "args": Object {
      "level": 30,
      "v": 0,
    },
    "cat": "main",
    "name": "msg1",
    "ph": "i",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  Object {
    "args": Object {
      "level": 30,
      "v": 0,
    },
    "cat": "undefined",
    "name": "long-duration",
    "ph": "B",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200500000,
  },
  Object {
    "args": Object {
      "id": 1,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "name": "duration1",
    "ph": "B",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531201000000,
  },
  Object {
    "args": Object {
      "level": 20,
      "v": 0,
    },
    "cat": "undefined",
    "name": "instant event",
    "ph": "i",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531201000000,
  },
  Object {
    "args": Object {
      "name": "parallel",
    },
    "name": "thread_name",
    "ph": "M",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531201500000,
  },
  Object {
    "args": Object {
      "sort_index": 1,
    },
    "name": "thread_sort_index",
    "ph": "M",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531201500000,
  },
  Object {
    "args": Object {
      "id": 2,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "name": "duration2",
    "ph": "B",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531201500000,
  },
  Object {
    "args": Object {
      "id": 1,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "ph": "E",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531202000000,
  },
  Object {
    "args": Object {
      "level": 10,
      "v": 0,
    },
    "cat": "undefined",
    "ph": "E",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531202250000,
  },
  Object {
    "args": Object {
      "id": 2,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "ph": "E",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531202500000,
  },
]
`;

exports[`DetoxLogFinalizer finalize should convert JSONL logs to Chrome Trace format 1`] = `
"2023-01-01T00:00:00.000Z detox[1234] i msg1
2023-01-01T00:00:00.500Z detox[1234] B long-duration
2023-01-01T00:00:01.000Z detox[1234] B duration1
2023-01-01T00:00:01.000Z detox[1234] i instant event
2023-01-01T00:00:01.500Z detox[1234] B duration2
2023-01-01T00:00:02.000Z detox[1234] E duration1
2023-01-01T00:00:02.250Z detox[1234] E long-duration
2023-01-01T00:00:02.500Z detox[1234] E duration2
"
`;

exports[`DetoxLogFinalizer finalize should convert JSONL logs to Chrome Trace format 2`] = `
Array [
  Object {
    "args": Object {
      "name": "primary",
    },
    "name": "process_name",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  Object {
    "args": Object {
      "sort_index": 0,
    },
    "name": "process_sort_index",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  Object {
    "args": Object {
      "name": "main",
    },
    "name": "thread_name",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  Object {
    "args": Object {
      "sort_index": 0,
    },
    "name": "thread_sort_index",
    "ph": "M",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  Object {
    "args": Object {
      "level": 30,
      "v": 0,
    },
    "cat": "main",
    "name": "msg1",
    "ph": "i",
    "pid": 1234,
    "tid": 0,
    "ts": 1672531200000000,
  },
  Object {
    "args": Object {
      "name": "undefined",
    },
    "name": "thread_name",
    "ph": "M",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531200500000,
  },
  Object {
    "args": Object {
      "sort_index": 1,
    },
    "name": "thread_sort_index",
    "ph": "M",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531200500000,
  },
  Object {
    "args": Object {
      "level": 30,
      "v": 0,
    },
    "cat": "undefined",
    "name": "long-duration",
    "ph": "B",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531200500000,
  },
  Object {
    "args": Object {
      "name": "parallel",
    },
    "name": "thread_name",
    "ph": "M",
    "pid": 1234,
    "tid": 2,
    "ts": 1672531201000000,
  },
  Object {
    "args": Object {
      "sort_index": 2,
    },
    "name": "thread_sort_index",
    "ph": "M",
    "pid": 1234,
    "tid": 2,
    "ts": 1672531201000000,
  },
  Object {
    "args": Object {
      "id": 1,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "name": "duration1",
    "ph": "B",
    "pid": 1234,
    "tid": 2,
    "ts": 1672531201000000,
  },
  Object {
    "args": Object {
      "level": 20,
      "v": 0,
    },
    "cat": "undefined",
    "name": "instant event",
    "ph": "i",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531201000000,
  },
  Object {
    "args": Object {
      "name": "parallel",
    },
    "name": "thread_name",
    "ph": "M",
    "pid": 1234,
    "tid": 3,
    "ts": 1672531201500000,
  },
  Object {
    "args": Object {
      "sort_index": 3,
    },
    "name": "thread_sort_index",
    "ph": "M",
    "pid": 1234,
    "tid": 3,
    "ts": 1672531201500000,
  },
  Object {
    "args": Object {
      "id": 2,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "name": "duration2",
    "ph": "B",
    "pid": 1234,
    "tid": 3,
    "ts": 1672531201500000,
  },
  Object {
    "args": Object {
      "id": 1,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "ph": "E",
    "pid": 1234,
    "tid": 2,
    "ts": 1672531202000000,
  },
  Object {
    "args": Object {
      "level": 10,
      "v": 0,
    },
    "cat": "undefined",
    "ph": "E",
    "pid": 1234,
    "tid": 1,
    "ts": 1672531202250000,
  },
  Object {
    "args": Object {
      "id": 2,
      "level": 10,
      "v": 0,
    },
    "cat": "parallel",
    "ph": "E",
    "pid": 1234,
    "tid": 3,
    "ts": 1672531202500000,
  },
]
`;
